# CS553-Cloud-Computing

./: README.md
hw1/: readme.txt
hw1/scripts/: .gitinclude  analyze.py  generate-dataset.sh  sort-data.sh
hw3/: CMakeLists.txt  README.md
hw3/doc/: export.txt
hw3/iozone/src/current/: fileop  iozone  pit_server
hw3/scripts/: parse.py  test.sh
hw3/src/: MyDiskBenchmark.c
hw4/: readme.txt
hw4/scripts/: calculator.py
hw4/table/: config1.csv  config2.csv  config3.csv
hw5/: CMakeLists.txt  readme.txt
hw5/doc/: export.txt
hw5/gensort-1.5/: gensort
hw5/include/mysort/: mysort.h
hw5/results/: table.csv
hw5/scripts/: parse.py  test.sh
hw5/src/: io.c  misc.c  mysort.c  task.c
hw6/: CMakeLists.txt  readme.txt
hw6/doc/VMs/: export.txt  install-1L.txt.template  install-1S.txt.template  install-4S.txt.template  remove.txt
hw6/gensort-1.5/: valsort
hw6/scripts/: parse.py  test.sh
hw6/src/: HadoopSort.java  SparkSort.java  cache.c  worker.c
